<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Airports Gissoft</string>
    <string name="title_name">Airports</string>
    <string name="hello_world">Hello world!</string>
    <string name="airport">Airport</string>
    <string name="country">Country</string>
    <string name="routes">Routes</string>
    // for AirportDetailActivity            <string name="title_activity_airport_detail">AirportDetailActivity</string>
    <string name="action_settings">Settings</string>
    <string name="name">Name</string>
    <string name="city">City</string>
    <!-- <string name="country">Country</string> -->
    <string name="iata">IATA</string>
    <string name="airline">Airlines</string>
    <string name="title_activity_airline_detail">AirlineDetailActivity</string>
    <string name="departures">Departures</string>
    <string name="title_activity_routes_search">RoutesSearchActivity</string>
    <string name="departure">Departure</string>
    <string name="arrival">Arrival</string>
    <string name="search">search</string>
    <string name="title_activity_route_results">RouteResultsActivity</string>
    <string name="source_airport">Source Airport</string>
    <string name="destination_airport">Destination Airport</string>
    <string name="title_activity_map">MapActivity</string>

</resources>
