<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="th.co.gissoft.airportsgissoft.activity.AirportDetailActivity">

    <com.esri.android.map.MapView
        android:id="@+id/mapView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        />

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/abc_text_size_display_1_material"
        android:layout_marginLeft="@dimen/abc_text_size_display_1_material"
        android:layout_marginRight="@dimen/abc_text_size_display_1_material"
        android:layout_marginBottom="@dimen/abc_text_size_display_1_material">

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:id="@+id/txt_name"
                android:layout_marginLeft="@dimen/abc_text_size_display_1_material"/>
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/abc_text_size_large_material"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/city"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/city"
                android:id="@+id/txt_city"
                android:layout_marginLeft="@dimen/abc_text_size_display_1_material"/>
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/abc_text_size_large_material"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/country"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/country"
                android:id="@+id/txt_country"
                android:layout_marginLeft="@dimen/abc_text_size_display_1_material"/>
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/abc_text_size_large_material"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/iata"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/iata"
                android:id="@+id/txt_iata"
                android:layout_marginLeft="@dimen/abc_text_size_display_1_material"/>
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/abc_text_size_large_material"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/airline"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/airline"
                android:id="@+id/txt_airlines"
                android:textColor="@color/blue_low"
                android:layout_marginLeft="@dimen/abc_text_size_display_1_material"/>
        </TableRow>

    </TableLayout>


</LinearLayout>
