<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="th.co.gissoft.airportsgissoft.activity.AirlineDetailActivity">

    <LinearLayout
        android:id="@+id/layouttop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/abc_text_size_large_material"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/img_airline_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:padding="@dimen/abc_text_size_large_material" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_airlines"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="20dp"
                android:paddingBottom="10dp"
                android:paddingLeft="@dimen/abc_text_size_large_material"
                android:text="@string/airline"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/text_secondary" />

            <TextView
                android:id="@+id/txt_iata"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="20dp"
                android:paddingLeft="@dimen/abc_text_size_large_material"
                android:text="@string/iata"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/text_secondary" />
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/departures"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layouttop"
        android:layout_marginLeft="@dimen/abc_text_size_large_material"
        android:text="@string/departures"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <View
        android:layout_width="wrap_content"
        android:layout_height="1px"
        android:id="@+id/imageView"
        android:layout_below="@+id/departures"
        android:layout_marginTop="@dimen/margin_text_header"
        android:background="@color/blue_low"/>

    <ListView
        android:id="@+id/list_airlines_details"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/imageView"
        android:layout_marginLeft="@dimen/abc_text_size_large_material"
        android:layout_marginTop="@dimen/margin_text_header"
        android:layout_marginRight="@dimen/abc_text_size_large_material">


    </ListView>


</RelativeLayout>
